# DevForge

./: .gitignore  .npmrc  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  rust-toolchain.toml
.claude/: settings.json  settings.strict.example.json
.claude/agents/: code-reviewer.md  debugger.md  implementer.md  isolated-implementer.md  repository-explorer.md  solution-architect.md  verifier.md
.claude/hooks/: format-edited-file.ps1  guard-dangerous-command.ps1  notify.ps1
.claude/rules/: always.md  dependencies.md  react.md  rust.md  security.md  testing.md
.claude/skills/development-flow/: SKILL.md
.claude/skills/implement-task/: SKILL.md
.claude/skills/review-change/: SKILL.md
.claude/skills/systematic-debugging/: SKILL.md
.claude/skills/verify-task/: SKILL.md
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md
apps/desktop/: eslint.config.js  index.html  package.json  vite.config.ts  vitest.config.ts
apps/desktop/src/: App.tsx  bindings.ts  main.tsx  queryKeys.ts  router.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/commands/: app_info.rs  discovery.rs  document.rs  index.rs  mod.rs  search.rs  source.rs  tab.rs  workspace.rs
apps/desktop/src/__tests__/: AppRouting.test.tsx  HomePage.test.tsx  MarkdownViewer.test.tsx  SearchPanel.test.tsx
apps/desktop/src/components/: AddSourceDialog.tsx  AppErrorBoundary.tsx  CodeViewer.tsx  FileTree.tsx  FileViewer.tsx  HealthStatus.tsx  MarkdownViewer.tsx  SearchPanel.tsx  TabBar.tsx  WorkspaceFormDialog.tsx  WorkspaceSettingsDialog.tsx
apps/desktop/src/hooks/: useAppInfo.ts  useDocuments.ts  useSearch.ts  useSources.ts  useTabs.ts  useThemeSync.ts  useWorkspaces.ts
apps/desktop/src/layouts/: AppLayout.tsx
apps/desktop/src/pages/: HomePage.tsx  NotFoundPage.tsx  RouteErrorPage.tsx  SettingsPage.tsx  WorkspaceListPage.tsx  WorkspacePage.tsx
apps/desktop/src/stores/: ui.ts
apps/desktop/src/styles/: global.css  workspace.css
apps/desktop/src/test/: setup.ts
crates/devforge-application/: Cargo.toml
crates/devforge-application/src/: app_info.rs  discovery.rs  document.rs  get_app_info.rs  lib.rs  ports.rs  source.rs  tab.rs  workspace.rs
crates/devforge-domain/: Cargo.toml
crates/devforge-domain/src/: document.rs  error.rs  lib.rs  opentab.rs  path_guard.rs  source.rs  workspace.rs
crates/devforge-platform/: Cargo.toml
crates/devforge-platform/src/: app_info.rs  lib.rs
crates/devforge-storage/: Cargo.toml  build.rs
crates/devforge-storage/migrations/: 0001_create_app_meta.sql  0002_create_workspaces.sql  0003_create_sources.sql  0004_create_documents.sql  0005_create_open_tabs.sql
crates/devforge-storage/src/: error.rs  indexer.rs  lib.rs  migrator.rs  pool.rs  repository.rs  status.rs
crates/devforge-storage/tests/: sqlite_bootstrap.rs
doc/doc/: part1.md  part2.md  part3.md  part4.md  part5.md  part6.md  part7.md  part8.md  part9.md
docs/: GOAL.md  STATE.json  implementation-status.md
docs/adr/: 0001-use-tauri-react-rust.md  0002-sqlite-as-source-of-truth.md  0003-use-tantivy.md  0004-tree-sitter-plus-lsp.md  0005-human-approved-agent.md  0006-embedded-vector-index.md  0007-git-worktree-isolation.md  0008-modular-rust-core.md  0009-wasm-plugin-system.md
docs/architecture/: agent-and-security.md  data-and-indexing.md  frontend-workbench.md  integrations-and-runtime.md  overview.md  quality-and-release.md  search-and-rag.md  security-boundaries.md
docs/design/: phase-1-local-workspace-design.md
docs/phases/: phase-0-first-work.md  phase-0-foundation.md  phase-1-workspaces.md  phase-2-indexing.md  phase-3-search.md  phase-4-ai-qa.md  phase-5-agent.md  phase-6-connectors.md  phase-7-plugins.md  phase-8-release.md
docs/plans/: indexing-pipeline-plan.md  phase-0-foundation-plan.md  rules-implementation-plan.md  workspace-import-plan.md
docs/product/: roadmap.md  scope.md  vision.md
docs/superpowers/plans/: 01-domain-storage.md  02-workspace-crud.md  03-source-and-path-security.md  04-file-discovery.md  05-file-tree-and-viewer.md  06-session-persistence-and-e2e.md  2026-07-17-devforge-phase-1-local-workspace-roadmap.md  2026-07-17-phase-1-vertical-slice-remediation.md
docs/verification/: phase-0-windows-release-smoke.md
scripts/: check.ps1
