[package]
name = "devforge-application"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
