[package]
name = "devforge-application"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
async-trait = { workspace = true }
devforge-domain = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
