[package]
name = "devforge-domain"
version = "0.1.0"
edition = "2021"
description = "DevForge 领域模型"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { workspace = true }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
