[package]
name = "devforge-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
async-trait = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
devforge-application = { workspace = true }
devforge-domain = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
