[package]
name = "devforge-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false
default-run = "devforge-desktop"

[lib]
name = "devforge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Task 3 已有
tauri = { version = "2", features = [] }

# Task 4 新增
anyhow = "1"
dirs = "6"
devforge-application = { workspace = true }
devforge-domain = { workspace = true }
devforge-platform = { workspace = true }
serde = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
tauri-specta = { workspace = true }

# Task 7 新增
devforge-storage = { workspace = true }

# Task 4 新增：dialog 插件
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = { workspace = true }
